--- a/webpage/index.html
+++ b/webpage/index.html
@@ -68,7 +68,7 @@
                             <p class="text-gold text-lg">Automatically generate test cases to ensure code reliability.</p>
                         </div>
                         <div class="md:w-1/2">
-                            <img src="placeholder.png" alt="Test Case Generation Example" class="rounded-md w-full">
+                            <img src="tests.png" alt="Test Case Generation Example" class="rounded-md h-128 mx-auto">
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                             <p class="text-gold text-lg">Identify bottlenecks and optimize your code's performance.</p>
                         </div>
                         <div class="md:w-1/2">
-                            <img src="placeholder.png" alt="Code Performance Analysis Example" class="rounded-md w-full">
+                            <img src="Code_performance.png" alt="Code Performance Analysis Example" class="rounded-md w-128 mx-auto">
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                             <p class="text-gold text-lg">Improve code readability and maintainability with AI-powered refactoring.</p>
                         </div>
                         <div class="md:w-1/2">
-                            <img src="placeholder.png" alt="Code Refactoring Example" class="rounded-md w-full">
+                            <img src="code_refactor.png" alt="Code Refactoring Example" class="rounded-md w-128 mx-auto">
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                             <p class="text-gold text-lg">Ensure smooth deployments with CI/CD pipeline checks.</p>
                         </div>
                         <div class="md:w-1/2">
-                           <img src="placeholder.png" alt="CI/CD Pipeline Check Example" class="rounded-md w-full">
+                           <img src="optim_pipe.png" alt="CI/CD Pipeline Check Example" class="rounded-md w-128 mx-auto">
                         </div>
                     </div>
                 </div>
